<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tutorial1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Mobile Challenge Cup</string>
    <string name="title_activity_linear_layout_eg">LinearLayout</string>
    <string name="title_activity_edit_text_eg">EditText</string>
    <string name="title_activity_image_view_eg">ImageView</string>
    <string name="title_activity_text_view_eg">TextView</string>
    <string name="title_activity_relative_layout">RelativeLayout</string>
    <string name="button_linear_layout">Linear layout example</string>
    <string name="button_relative_layout">Relative layout example</string>
    <string name="button_text_view">Text View example</string>
    <string name="button_image_view">Image View example</string>
    <string name="button_edit_text">Edit text example</string>
    <string name="button_activity_eg">Activity example</string>
    <string name="image_view_activity_title">Click on the launcher icon to change image</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">vertical</string>
    <string name="weight">Weight</string>
    <string name="activity_example">Activity example</string>

</resources>
