<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:background="@color/background"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_height="match_parent">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:textSize="@dimen/title_size"
                  android:padding="@dimen/text_padding"
                  android:textStyle="bold"
                  android:text="@string/title"/>

        <Button
            android:id="@+id/button_liner_layout_ex"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_ex_height"
            style="@style/button_style"
            android:text="@string/button_linear_layout"
            />

        <Button

            android:id="@+id/button_relative_layout_ex"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_ex_height"
            style="@style/button_style"
            android:text="@string/button_relative_layout"/>

        <Button
            android:id="@+id/button_text_view_ex"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_ex_height"
            style="@style/button_style"
            android:text="@string/button_text_view"/>

        <Button
            android:id="@+id/button_image_view_ex"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_ex_height"
            style="@style/button_style"
            android:text="@string/button_image_view"/>

        <Button
            android:id="@+id/button_edit_text_ex"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_ex_height"
            style="@style/button_style"
            android:text="@string/button_edit_text"/>

        <Button
            android:id="@+id/button_activity_ex"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_ex_height"
            style="@style/button_style"
            android:text="@string/button_activity_eg"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/image_jopa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/jopac"/>
</RelativeLayout>
